add post hourly